--- a/Club-royal.html
+++ b/Club-royal.html
@@ -92,8 +92,7 @@
                         <div class="caption">
                             <div class="title white mb-10">Club Royal</div>
 
-                            <p>Spacious, bright guestrooms with tasteful furnishing, wooden floor and panoramic windows
-                                from the ceiling to the floor.</p>
+                            <p>Spacious and bright guestrooms featuring tasteful furnishings, wooden flooring, and floor-to-ceiling panoramic windows.</p>
                                 <div class="row">
                                     <div class="col col-md-6">
                                         <ul class="list-unstyled list mb-4">
