--- a/about.html
+++ b/about.html
@@ -352,7 +352,7 @@
                             <!-- <p>Swimming pool tincidunt nise ace the park norttito sit space mus nellen habitant.</p> -->
                         </div>
                         <div class="item"> 
-                            <div class="icon"><img  src="img/wheelchair.png" alt=""> </div>
+                            <div class="icon"><img  src="img/Wheelchair.png" alt=""> </div>
                             <h5><a href="#">Physcially Challeged friendly</a></h5>
                             <!-- <p>Wifi tincidunt nis ace park norttito sit amet space, mus nellentesque habitant.</p> -->
                         </div>
