--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <div class="col-md-4 p-0">
                     <div class="services3-text third">
                         <h5>Amenities</h5>
-                        <p>Sandy's Tower Hotel offers versatile venues for all your events. Choose from two elegant banquet halls, a well-equipped conference room, or two beautifully landscaped outdoor lawns. With state-of-the-art facilities and exceptional service, we ensure your events are memorable.</p>
+                        <p>Our amenities include a pristine swimming pool perfect for a refreshing dip, a cutting-edge fitness center equipped for all your workout needs, and a serene spa offering rejuvenating treatments. Experience the best in relaxation and wellness at Sandy's Tower Hotel.</p>
                         <div class="butn-dark"> <a href="spa-wellness.html"><span>Learn More</span></a> </div>
                     </div>
                 </div>
@@ -440,7 +440,7 @@
             </div>
             <div class="col-md-9">
                 <div class="section-title">Our Additional Services</div>
-                <p>Hotel ut nisl quam nestibulum ac quam nec odio elementum sceisue the aucan ligula. Orci varius natoque penatibus et magnis dis parturient monte nascete ridiculus mus nellentesque habitant morbine.</p>
+                <p>We offer a range of additional services to ensure a comfortable stay, tailored to meet your unique needs and provide peace of mind. At Sandy's Tower Hotel, your convenience and well-being are our top priorities.</p>
             </div>
         </div>
         <div class="row">
@@ -470,7 +470,7 @@
                         <!-- <p>Swimming pool tincidunt nise ace the park norttito sit space mus nellen habitant.</p> -->
                     </div>
                     <div class="item"> 
-                        <div class="icon"><img  src="img/wheelchair.png" alt=""> </div>
+                        <div class="icon"><img  src="img/Wheelchair.png" alt=""> </div>
                         <h5><a href="#">Physcially Challeged friendly</a></h5>
                         <!-- <p>Wifi tincidunt nis ace park norttito sit amet space, mus nellentesque habitant.</p> -->
                     </div>
@@ -493,7 +493,7 @@
             </div>
             <div class="col-md-9">
                 <div class="section-title">Packages </div>
-                <p>Reserve the room you prefer (depending on availability). Choose from a variety of sizes and styles. Lorem ipsum viverra tristique justo duis vitae diaminte neque nivamus aestan artines in the nedana mis erodino fermen.</p>
+                <p> Explore our diverse range of packages designed to cater to every interest, from rejuvenating spiritual retreats to thrilling adventure excursions. At Sandy's Tower Hotel, we provide curated experiences that promise to make your stay unforgettable.</p>
             </div>
         </div>
         <div class="row">
