--- a/Royal-Suit.html
+++ b/Royal-Suit.html
@@ -95,10 +95,9 @@
                             </div>
                         </figure>
                         <div class="caption">
-                            <div class="title white mb-10">Royal Suit</div>
+                            <div class="title white mb-10">Royal Suite</div>
 
-                            <p>Spacious, bright guestrooms with tasteful furnishing, wooden floor and panoramic windows
-                                from the ceiling to the floor.</p>
+                            <p>The Royal Suite boasts a separate living room and bedroom, offering ample space and comfort for an exceptional stay..</p>
                                 <div class="row">
                                     <div class="col col-md-6">
                                         <ul class="list-unstyled list mb-4">
