--- a/meetingsandevents.html
+++ b/meetingsandevents.html
@@ -39,6 +39,9 @@
                     <li><a href='rooms4.html'>Rooms &amp; Suites </a>
 
                     </li>
+                    <li><a href="meetingsandevents.html">Meetings & Events </a>
+
+                    </li>
                     
                     <li><a href="restaurant.html">Restaurant</a></li>
                     <li><a href='amenities.html'>Amenities </a>
@@ -56,7 +59,7 @@
                         <div class="icon d-flex justify-content-center align-items-center">
                             <i class="flaticon-call"></i>
                         </div>
-                        <div class="call">Reservation<br><span>855 000 3333</span></div>
+                        <div class="call">Reservation<br><span><a href="tel:+91 6746665555">+91 6746665555</a> </span></div>
                     </a>
                 </div>
             </div>
@@ -288,74 +291,7 @@
             </div>
         </div>
     </section>
-    <!-- Booking Search -->
-    <section class="section-padding bg-img bg-fixed" data-overlay-dark="3" data-background="img/rooms/18.jpg">
-        <div class="container">
-            <div class="booking-inner clearfix">
-                <form action="#" class="form1 clearfix">
-                    <div class="col1 c1">
-                        <div class="input1_wrapper border-l border-b border-t border-r">
-                            <label>Check in</label>
-                            <div class="input1_inner">
-                                <input type="text" class="form-control input datepicker" placeholder="Check in">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col1 c2">
-                        <div class="input1_wrapper border-l border-b border-t border-r">
-                            <label>Check out</label>
-                            <div class="input1_inner">
-                                <input type="text" class="form-control input datepicker" placeholder="Check out">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col2 c3">
-                        <div class="select1_wrapper border-l border-b border-t border-r">
-                            <label>Adults</label>
-                            <div class="select1_inner">
-                                <select class="select2 select" style="width: 100%">
-                                    <option value="1">1 Adult</option>
-                                    <option value="2">2 Adults</option>
-                                    <option value="3">3 Adults</option>
-                                    <option value="4">4 Adults</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col2 c4">
-                        <div class="select1_wrapper border-l border-b border-t border-r">
-                            <label>Children</label>
-                            <div class="select1_inner">
-                                <select class="select2 select" style="width: 100%">
-                                    <option value="1">Children</option>
-                                    <option value="1">1 Child</option>
-                                    <option value="2">2 Children</option>
-                                    <option value="3">3 Children</option>
-                                    <option value="4">4 Children</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col2 c5">
-                        <div class="select1_wrapper border-l border-b border-t border-r">
-                            <label>Rooms</label>
-                            <div class="select1_inner">
-                                <select class="select2 select" style="width: 100%">
-                                    <option value="1">1 Room</option>
-                                    <option value="2">2 Rooms</option>
-                                    <option value="3">3 Rooms</option>
-                                    <option value="4">4 Rooms</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col3 c6">
-                        <button type="submit" class="btn-form1-submit">Check Now</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="top">
@@ -370,7 +306,7 @@
                             <p>Plot No. P-1 & P-1/A, Jaydev Vihar,<br> Bhubaneswar, Odisha 75101
                             </p>
                             <p class="phone"><a href="tel:+91 6746665555">+91 6746665555</a></p>
-                        <p class="phone"><a href="tel:+91 9040255555">+91 90402555551</a></p>
+                        
                             <p class="mail"><a href="info@sandystower.com">info@sandystower.com</a></p>
                             <div class="social mt-2"> <a href="index.html"><i class="ti-twitter"></i></a> <a
                                     href="index.html"><i class="ti-instagram"></i></a> <a href="index.html"><i
