--- a/blog.html
+++ b/blog.html
@@ -55,11 +55,11 @@
             </nav>
             <div class="patara-menu-footer">
                 <div class="reservation">
-                    <a href="tel:8551004444">
+                    <a href="tel:+91 6746665555">
                         <div class="icon d-flex justify-content-center align-items-center">
                             <i class="flaticon-call"></i>
                         </div>
-                        <div class="call">Reservation<br><span>855 000 3333</span></div>
+                        <div class="call">Reservation<br><span>+91 6746665555</span></div>
                     </a>
                 </div>
             </div>
