--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
         </div>
     </div>
     <!-- Progress scroll totop -->
-    <div class="progress-wrap cursor-pointer">
-        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-        </svg>
-    </div>
+    
     <!-- Whatsapp  -->
     <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
@@ -173,71 +169,7 @@
     </aside>
     <!-- Booking Search -->
     <div class="booking-wrapper">
-        <div class="container">
-            <div class="booking-inner clearfix">
-                <form action="#" class="form1 clearfix">
-                    <div class="col1 c1">
-                        <div class="input1_wrapper border-l border-b border-t border-r">
-                            <label>Check in</label>
-                            <div class="input1_inner">
-                                <input type="text" class="form-control input datepicker" placeholder="Check in">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col1 c2">
-                        <div class="input1_wrapper border-l border-b border-t border-r">
-                            <label>Check out</label>
-                            <div class="input1_inner">
-                                <input type="text" class="form-control input datepicker" placeholder="Check out">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col2 c3">
-                        <div class="select1_wrapper border-l border-b border-t border-r">
-                            <label>Adults</label>
-                            <div class="select1_inner">
-                                <select class="select2 select" style="width: 100%">
-                                    <option value="1">1 Adult</option>
-                                    <option value="2">2 Adults</option>
-                                    <option value="3">3 Adults</option>
-                                    <option value="4">4 Adults</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col2 c4">
-                        <div class="select1_wrapper border-l border-b border-t  border-r">
-                            <label>Children</label>
-                            <div class="select1_inner">
-                                <select class="select2 select" style="width: 100%">
-                                    <option value="1">Children</option>
-                                    <option value="1">1 Child</option>
-                                    <option value="2">2 Children</option>
-                                    <option value="3">3 Children</option>
-                                    <option value="4">4 Children</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col2 c5">
-                        <div class="select1_wrapper border-l border-b border-t  border-r">
-                            <label>Rooms</label>
-                            <div class="select1_inner">
-                                <select class="select2 select" style="width: 100%">
-                                    <option value="1">1 Room</option>
-                                    <option value="2">2 Rooms</option>
-                                    <option value="3">3 Rooms</option>
-                                    <option value="4">4 Rooms</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col3 c6">
-                        <button type="submit" class="btn-form1-submit">Check Now</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+        <script src="https://www.swiftbook.io/plugin/js/booking-service.min.js" id="propInfo" propertyid="941MtbTWvBq3SjN7xKL8URr2bNUF7VI4T5BndBLG4o7zRxo5lf5jYzMDc=" cal-rendererId="quickbook-widget" JDRN="Y" redirect="off"></script><div id="quickbook-widget"></div>
     </div>
      <!-- About -->
   <section class="about section-padding bg-white" data-scroll-index="1">
