--- a/Royal-Suit.html
+++ b/Royal-Suit.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <!-- Progress scroll totop -->
-    
+
     <!-- Menu -->
     <div class="patara-wrap">
         <div class="patara-wrap-inner">
@@ -93,104 +93,111 @@
                         <div class="caption">
                             <div class="title white mb-10">Royal Suite</div>
 
-                            <p>The Royal Suite boasts a separate living room and bedroom, offering ample space and comfort for an exceptional stay..</p>
-                                <div class="row">
-                                    <div class="col col-md-6">
-                                        <ul class="list-unstyled list mb-4">
-                                            <li>
-                                                <div class="icon"> <img class="icon1" src="img/work-station.png" alt=""> </div>
-                                                <div class="text">
-                                                    <p>Work station</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <img class="icon1" src="img/LCD.png" alt=""> </div>
-                                                <div class="text">
-                                                    <p>Multi-channel LCD TV</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <span class="flaticon-phone"></span> </div>
-                                                <div class="text">
-                                                    <p>Direct dial telephone</p>
-                                                </div>
-                                            </li>
-                                            <!-- <li>
+                            <p>The Royal Suite boasts a separate living room and bedroom, offering ample space and
+                                comfort for an exceptional stay..</p>
+                            <div class="row">
+                                <div class="col col-md-6">
+                                    <ul class="list-unstyled list mb-4">
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/work-station.png" alt="">
+                                            </div>
+                                            <div class="text">
+                                                <p>Work station</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/LCD.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Multi-channel LCD TV</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <span class="flaticon-phone"></span> </div>
+                                            <div class="text">
+                                                <p>Direct dial telephone</p>
+                                            </div>
+                                        </li>
+                                        <!-- <li>
                                                 <div class="icon"> <span class="flaticon-swimming"></span> </div>
                                                 <div class="text">
                                                     <p>Swimming Pool</p>
                                                 </div>
                                             </li> -->
-                                            <li>
-                                                <div class="icon"> <img class="icon1" src="img/mini-bar.png" alt="">  </div>
-                                                <div class="text">
-                                                    <p>Mini-bar</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <img class="icon1" src="img/iron-board.png" alt=""> </div>
-                                                <div class="text">
-                                                    <p>Iron Board</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"><img class="icon1" src="img/Hair-dryer.png" alt=""> </div>
-                                                <div class="text">
-                                                    <p>Hair Dryer</p>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col col-md-6">
-                                        <ul class="list-unstyled list mb-4">
-                                            <!-- <li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/mini-bar.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Mini-bar</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/iron-board.png" alt="">
+                                            </div>
+                                            <div class="text">
+                                                <p>Iron Board</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"><img class="icon1" src="img/Hair-dryer.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Hair Dryer</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="col col-md-6">
+                                    <ul class="list-unstyled list mb-4">
+                                        <!-- <li>
                                                 <div class="icon"> <span class="flaticon-towel"></span> </div>
                                                 <div class="text">
                                                     <p>Laundry Service</p>
                                                 </div>
                                             </li> -->
-                                            <li>
-                                                <div class="icon"> <span class="flaticon-clock-1"></span> </div>
-                                                <div class="text">
-                                                    <p>24 hours hot/cold water
-                                                    </p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <span class="flaticon-coffee-cup"></span> </div>
-                                                <div class="text">
-                                                    <p>Tea/coffer maker </p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <span class="flaticon-wifi"></span> </div>
-                                                <div class="text">
-                                                    <p>Wi-Fi connectivity</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <img class="icon1" src="img/Imported-amenities.png" alt="">  </div>
-                                                <div class="text">
-                                                    <p>Imported Toiletries</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <img class="icon1" src="img/Electronic-safe.png" alt=""> </div>
-                                                <div class="text">
-                                                    <p>Electronic safe </p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="icon"> <img class="icon1" src="img/fruit-basket.png" alt=""> </div>
-                                                <div class="text">
-                                                    <p>Fruit Basket</p>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                        <li>
+                                            <div class="icon"> <span class="flaticon-clock-1"></span> </div>
+                                            <div class="text">
+                                                <p>24 hours hot/cold water
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <span class="flaticon-coffee-cup"></span> </div>
+                                            <div class="text">
+                                                <p>Tea/coffer maker </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <span class="flaticon-wifi"></span> </div>
+                                            <div class="text">
+                                                <p>Wi-Fi connectivity</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/Imported-amenities.png"
+                                                    alt=""> </div>
+                                            <div class="text">
+                                                <p>Imported Toiletries</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/Electronic-safe.png" alt="">
+                                            </div>
+                                            <div class="text">
+                                                <p>Electronic safe </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/fruit-basket.png" alt="">
+                                            </div>
+                                            <div class="text">
+                                                <p>Fruit Basket</p>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </div>
+                            </div>
                             <div class="book">
-                                <div><a href="Club-Executive.html" class="butn-dark2"><span>Book</span></a></div>
+                                <div><a href="https://www.swiftbook.io/inst/#home?propertyId=941MtbTWvBq3SjN7xKL8URr2bNUF7VI4T5BndBLG4o7zRxo5lf5jYzMDc=&JDRN=Y"
+                                        class="butn-dark2"><span>Book</span></a></div>
 
                             </div>
                         </div>
@@ -215,18 +222,18 @@
                             <p>Plot No. P-1 & P-1/A, Jaydev Vihar,<br> Bhubaneswar, Odisha 75101
                             </p>
                             <p class="phone"><a href="tel:+91 6746665555">+91 6746665555</a></p>
-                        
+
                             <p class="mail"><a href="info@sandystower.com">info@sandystower.com</a></p>
-                            <div class="social mt-2"> <a href="index.html"><i class="ti-twitter"></i></a> <a
-                                    href="index.html"><i class="ti-instagram"></i></a> <a href="index.html"><i
-                                        class="ti-linkedin"></i></a> </div>
+                            <div class="social mt-2"> <a href="https://www.facebook.com/hotelsandystowerodisha/"><i
+                                        class="ti-facebook"></i></a> <a href="https://www.instagram.com/hotel.sandystower?igsh=MTRjYm10dTdoajFkZw=="><i
+                                        class="ti-instagram"></i></a>  </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="item">
                             <h3>Quick Links</h3>
                             <ul class="footer-explore-list list-unstyled">
-                                 <li><a href="rooms4.html">Rooms & Suites</a></li>
+                                <li><a href="rooms4.html">Rooms & Suites</a></li>
                                 <li><a href="restaurant.html">Restaurants</a></li>
                                 <li><a href="meetingsandevents.html">Meetings And Events</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
