--- a/pricing.html
+++ b/pricing.html
@@ -213,7 +213,7 @@
                             <p class="phone"><a href="tel:+91 6746665555">+91 6746665555</a></p>
                         
                             <p class="mail"><a href="info@sandystower.com">info@sandystower.com</a></p>
-                            <div class="social mt-2"> <a href="index.html"><i class="ti-twitter"></i></a> <a href="index.html"><i class="ti-instagram"></i></a> <a href="index.html"><i class="ti-linkedin"></i></a> </div>
+                            <div class="social mt-2">  <a href="https://www.facebook.com/hotelsandystowerodisha/"><i class="ti-facebook"></i></a> <a href="index.html"><i class="ti-instagram"></i></a> <a href="index.html"><i class="ti-linkedin"></i></a> </div>
                         </div>
                     </div>
                     <div class="col-md-4">
